# claude-watch

./: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.xiao_esp32s3
CAD/: ClaudeWatch-V1.step
components/api_client/: CMakeLists.txt  api_client.c
components/api_client/include/: api_client.h
components/chsc6x/: CMakeLists.txt  chsc6x.c
components/chsc6x/include/: chsc6x.h
components/display_text/: CMakeLists.txt  display_text.c  font_5x7.h
components/display_text/include/: display_text.h
components/dns_server/: CMakeLists.txt
components/gc9a01/: CMakeLists.txt  gc9a01.c
components/gc9a01/include/: esp_lcd_gc9a01.h
components/polar_graph/: CMakeLists.txt  polar_graph.c
components/polar_graph/include/: polar_graph.h
components/qr_display/: CMakeLists.txt  qr_display.c
components/qr_display/include/: qr_display.h
components/usage_store/: CMakeLists.txt  usage_store.c
components/usage_store/include/: usage_store.h
components/wifi_manager/: CMakeLists.txt  gen_html_header.py  portal.html  portal_html.h  settings_html.h  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
scripts/: convert_usage.py
src/: CMakeLists.txt  main.c
web/: build.sh  package-lock.json  package.json
web/src/: app.ts  index.html  types.ts
